--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 # The name of the application (no spaces)
-app_name: ichnofossil guilds
+app_name: ichnofossil_guilds
 
 # A brief description of the app.
 description : Find trace fossil names that can be assigned to geological formations and produce a table marking
