--- a/credentials.yml.example
+++ b/credentials.yml.example
@@ -3,5 +3,5 @@ postgres:
     user: postgres_username
     port: 5432
     host: localhost
-    database: deepdive_app
+    database: ichnofossils
     password: password123
